--- a/uploadSensorData/platformio.ini
+++ b/uploadSensorData/platformio.ini
@@ -16,7 +16,9 @@ framework = arduino
 ;build_flags = -DDEBUG_ESP_PORT=Serial -DDEBUG_ESP_SSL -DDEBUG_ESP_TLS_MEM 
 ; -DDEBUG_ESP_HTTP_CLIENT -DDEBUG_ESP_CORE -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_UPDATE
 build_flags = -DASYNC_TCP_SSL_ENABLED=1 
-lib_deps = https://github.com/marvinroger/homie-esp8266.git
+lib_deps =
+  https://github.com/marvinroger/homie-esp8266.git
+  simpleTimer
 
 ; Serial Monitor options
-monitor_baud = 115200
+monitor_speed = 115200
