Use non-development version of expressif8266

--- a/uploadSensorData/platformio.ini
+++ b/uploadSensorData/platformio.ini
@@ -9,8 +9,8 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [env:esp01_1m]
-platform = https://github.com/platformio/platform-espressif8266.git#feature/stage
-;espressif8266
+;platform = https://github.com/platformio/platform-espressif8266.git#feature/stage
+platform = espressif8266
 board = esp01_1m
 framework = arduino
 ;build_flags = -DDEBUG_ESP_PORT=Serial -DDEBUG_ESP_SSL -DDEBUG_ESP_TLS_MEM 
