Add LED state signaling (alternative to serial output)

--- a/uploadSensorData/platformio.ini
+++ b/uploadSensorData/platformio.ini
@@ -19,6 +19,7 @@ build_flags = -DASYNC_TCP_SSL_ENABLED=1
 lib_deps =
   https://github.com/marvinroger/homie-esp8266.git
   simpleTimer
+  jled
 
 ; Serial Monitor options
 monitor_speed = 115200
