Add username/password of MQTT broker. Move config handling to classes.

--- a/mqtt_telegram_bot/.mqtt_telegram_bot.ini
+++ b/mqtt_telegram_bot/.mqtt_telegram_bot.ini
@@ -1,6 +1,9 @@
 [MQTT]
 broker = broker.address
 ca = ~/mqtt_ca.crt
+username = username
+password = password
+topics_path = homie/door_sensor/reeds/#
 
 [Telegram]
 token = TOKEN
