Send reminder if door is not closed

--- a/mqtt_telegram_bot/.mqtt_telegram_bot.ini
+++ b/mqtt_telegram_bot/.mqtt_telegram_bot.ini
@@ -4,6 +4,7 @@ ca = ~/mqtt_ca.crt
 username = username
 password = password
 topics_path = homie/door_sensor/reeds/#
+remind_interval = 300
 
 [Telegram]
 token = TOKEN
